force-app/main/default/objects/fw1__Installment__c/fw1__Installment__c.object-meta.xml
<CustomObject>
    <label>Installment</label>
    <nameField>
        <label>Installment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Installments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>