force-app/main/default/objects/fw1__Installment__c/fields/fw1__Auto_Billed__c.field-meta.xml
<CustomField>
    <fullName>fw1__Auto_Billed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag indicates that the installment has been attempted auto-billpay (successful or not)</description>
    <label>Auto-Billed</label>
    <type>Checkbox</type>
</CustomField>