force-app/main/default/objects/fw1__Installment__c/fields/fw1__Auto_BillPay_Date__c.field-meta.xml
<CustomField>
    <fullName>fw1__Auto_BillPay_Date__c</fullName>
    <formula>IF(TEXT(fw1__Invoice__r.fw1__Auto_BillPay_Options__c) == &apos;Installment Due Date&apos;,  fw1__Due_Date__c , fw1__Installment_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto-BillPay Date</label>
    <type>Date</type>
</CustomField>