force-app/main/default/objects/fw1__Installment__c/fields/fw1__Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>fw1__Balance_Due__c</fullName>
    <formula>fw1__Total_Installment_Amount__c  -  fw1__Paid_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>