force-app/main/default/objects/fw1__Installment__c/fields/fw1__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>fw1__Due_Date__c</fullName>
    <formula>fw1__Installment_Date__c  +  fw1__Terms__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>