force-app/main/default/objects/fw1__Installment__c/fields/fw1__Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>fw1__Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Sent</label>
    <type>Checkbox</type>
</CustomField>