force-app/main/default/objects/fw1__Installment__c/fields/fw1__Installment_Age__c.field-meta.xml
<CustomField>
    <fullName>fw1__Installment_Age__c</fullName>
    <formula>IF( fw1__Balance_Due__c  &gt; 0,  IF(TODAY() &gt; fw1__Due_Date__c, ROUND(TODAY() - fw1__Due_Date__c,0), 0) , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installment Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>