force-app/main/default/objects/fw1__Installment__c/fields/fw1__Installment_Amount__c.field-meta.xml
<CustomField>
    <fullName>fw1__Installment_Amount__c</fullName>
    <label>Installment Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>