force-app/main/default/objects/fw1__Installment__c/fields/fw1__Installment_Date__c.field-meta.xml
<CustomField>
    <fullName>fw1__Installment_Date__c</fullName>
    <label>Installment Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>