force-app/main/default/objects/fw1__Installment__c/fields/fw1__Invoice__c.field-meta.xml
<CustomField>
    <fullName>fw1__Invoice__c</fullName>
    <label>Invoice</label>
    <referenceTo>fw1__Invoice__c</referenceTo>
    <relationshipLabel>Installments</relationshipLabel>
    <relationshipName>Installments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>