force-app/main/default/objects/fw1__Installment__c/fields/fw1__Is_Due__c.field-meta.xml
<CustomField>
    <fullName>fw1__Is_Due__c</fullName>
    <formula>IF( AND(fw1__Installment_Date__c &lt;= TODAY(),  fw1__Balance_Due__c &gt; 0) , &apos;Y&apos;, &apos;N&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Due</label>
    <type>Text</type>
</CustomField>