force-app/main/default/objects/fw1__Installment__c/fields/fw1__Payment__c.field-meta.xml
<CustomField>
    <fullName>fw1__Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <referenceTo>fw1__Payment__c</referenceTo>
    <relationshipLabel>Installments</relationshipLabel>
    <relationshipName>Installments</relationshipName>
    <type>Lookup</type>
</CustomField>