force-app/main/default/objects/fw1__Installment__c/fields/fw1__Status__c.field-meta.xml
<CustomField>
    <fullName>fw1__Status__c</fullName>
    <formula>IF(fw1__Total_Installment_Amount__c   =   fw1__Paid_Amount__c, 
     IF(fw1__Payment__r.fw1__Status__c  =  &apos;Authorized&apos;, 
          &apos;AUTHORIZED&apos;, 
          &apos;PAID&apos;) , 
     IF(fw1__Is_Due__c  =  &apos;Y&apos;, 
          &apos;DUE&apos;, 
          &apos;&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>