force-app/main/default/objects/fw1__Installment__c/fields/fw1__Total_Installment_Amount__c.field-meta.xml
<CustomField>
    <fullName>fw1__Total_Installment_Amount__c</fullName>
    <formula>fw1__Installment_Amount__c +  fw1__Installment_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Installment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>